<resources>
    <string name="app_name">Notas Alunos</string>
    <string name="nome">Nome</string>
    <string name="hint_nome">Digite seu nome</string>
    <string name="nota1">Nota 1</string>
    <string name="hint_nota1">Digite nota 1</string>
    <string name="nota2">Nota 2</string>
    <string name="hint_nota2">Digite nota 2</string>
    <string name="calcular">Calcular</string>
    <string name="limpar">Limpar Dados</string>
    <string name="aguardando">Aguardando...</string>
    <string name="nome_obrigatorio">Nome é obrigatorio</string>
    <string name="nota1_obrigatorio">Nota 1 é obrigatorio</string>
    <string name="nota2_obrigatorio">Nota 2 é obrigatorio</string>
</resources>
